Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9706

Text anti aliasing broken with OpenGL2 paint engine

    XMLWordPrintable

Details

    • 67e8e5baeec38d592596f259894e6dda420728ea

    Description

      When drawing text using QPainter::drawText in an opengl widget, the anti aliasing seems not to work with the OpenGL2 paint engine when the text is rotated. This looks especially bad when drawing small text. With the OpenGL paint engine it looks fine.
      I attach the code based on the 2dpainting example with an added rotation so that the problem is visible.

      Attachments

        1. 2dpainting.tgz
          1.48 MB
        2. OpenGL2PaintEngine.png
          OpenGL2PaintEngine.png
          37 kB
        3. OpenGLPaintEngine.png
          OpenGLPaintEngine.png
          37 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              xalioth Fabien Chéreau
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes