src/opengl/gl2paintengineex/qtextureglyphcache_gl_p.h
@@ -73,6 +73,7 @@ public:
     virtual void resizeTextureData(int width, int height);
     virtual void fillTexture(const Coord &c, glyph_t glyph);
     virtual int glyphMargin() const;
+    virtual int glyphPadding() const;
 
     inline GLuint texture() const { return m_texture; }
 
